// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`renderCommentBody — snapshot golden files blocked 1`] = `
"**tripwire: blocked** — this change tripped 2 of 6 rules. it can’t merge until they clear.

<details><summary>for maintainers</summary>

every rule, its evidence, and the AI review are on the run page:

<a href="https://tripwire.sh/runs/0198abcd"><img src="https://tripwire.sh/badges/view-run.png" width="185" alt="View on Tripwire" /></a>

</details>
<!-- tripwire:run -->
"
`;

exports[`renderCommentBody — snapshot golden files passed 1`] = `
"**tripwire: passed** — cleared all 6 rules — good to merge.

<details><summary>for maintainers</summary>

every rule, its evidence, and the AI review are on the run page:

<a href="https://tripwire.sh/runs/0198abcd"><img src="https://tripwire.sh/badges/view-run.png" width="185" alt="View on Tripwire" /></a>

</details>
<!-- tripwire:run -->
"
`;

exports[`renderCommentBody — snapshot golden files sent to review 1`] = `
"**tripwire: sent to review** — this change needs a maintainer’s eyes before it can merge.

<details><summary>for maintainers</summary>

every rule, its evidence, and the AI review are on the run page:

<a href="https://tripwire.sh/runs/0198abcd"><img src="https://tripwire.sh/badges/view-run.png" width="185" alt="View on Tripwire" /></a>

</details>
<!-- tripwire:run -->
"
`;
